fix: body overflow and scrolling

--- a/src/app.css
+++ b/src/app.css
@@ -59,18 +59,12 @@ a:focus, button:focus {
 	color: var(--b7);
   
 }
-html,
+
 body {
-  height: 100%;
-  height: 100dvh;
+  min-height: 100dvh;
   /* overflow: clip; */
-  overflow: hidden;
   width: 100svw;
   overscroll-behavior-y: none;
-&>div.content {
-  min-height: 100%;
-}
-
 }
 
 h1 {
